tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_no_trait_method_constraints/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: impl has stricter requirements than trait
   ┌─ src/main.nr:5:12
   │
 5 │         fn serialize(self) -> [Field; N];
   │            --------- definition of `serialize` from trait
   ·
26 │         fn serialize(self) -> [Field; 2] where T: ToField {
   │                                                   ------- impl has extra requirement `T: ToField`
   │

Aborting due to 1 previous error
