tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_no_trait_method_constraints/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: impl has stricter requirements than trait
   ┌─ src/main.nr:5:12
   │
 5 │         fn serialize(self) -> [Field; N];
   │            --------- definition of `serialize` from trait
   ·
26 │         fn serialize(self) -> [Field; 2] where T: ToField {
   │                                                   ------- impl has extra requirement `T: ToField`
   │

Aborting due to 1 previous error
